--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,19 @@
+version: "3.8"
+services:
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    container_name: Web_app_backend
+    ports:
+      - "5000:5000"
 
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.client
+    container_name: Web_app_frontend
+    ports:
+      - "8080:8080"
+    depends_on:
+      - backend
