--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Build React frontend
-FROM node:18-alpine as build
+FROM node:18-bullseye as build
 WORKDIR /app
 COPY frontend/package*.json ./
 RUN npm install
