--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,10 +37,10 @@ jobs:
       - name: Rebuild and deploy
         run: |
           docker compose build
-          
+
       - name: Start application
         run: |
-          docker compose up -d   # <--- containers stay running in background
+          docker compose up -d 
 
       - name: Clean up unused Docker data
         run: docker system prune -af
