--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,3 +41,6 @@ jobs:
       - name: Start application
         run: |
           docker compose up -d 
+
+      - name: Clean up unused Docker data
+        run: docker system prune -af
