--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Build React frontend
-FROM node:22-bullseye as build
+FROM node:22-bullseye AS build
 WORKDIR /app
 COPY frontend/package*.json ./
 RUN npm install
