--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,12 +35,7 @@ jobs:
         run: docker compose down || true
 
       - name: Rebuild and deploy
-        run: |
-          docker compose build
-
-      - name: Start application
-        run: |
-          docker compose up -d 
+        run: docker compose up -d --build
 
       - name: Clean up unused Docker data
         run: docker system prune -af
