--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,3 +39,8 @@ jobs:
 
       - name: Clean up unused Docker data
         run: docker system prune -af
+      
+      - name: Moving html to nginx dir
+        run: |
+          ls -a
+          
