--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,5 @@ services:
       context: .
       dockerfile: Dockerfile.backend
     container_name: Web_app_backend
-
-
-  frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile.frontend
-    container_name: Web_app_frontend
-    
-    depends_on:
-      - backend
+    ports:
+      - "5000:5000"
