--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,4 +43,7 @@ jobs:
       - name: Moving html to nginx dir
         run: |
           ls -a
+          cd frontend
+          npm run build
+
           
