--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,10 @@ jobs:
         run: |
           ls -a
           cd frontend
+          node -v
+          npm -v
+          npm ci
           npm run build
-          
+
 
           
