--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,10 +35,10 @@ jobs:
         run: |
           ls -a
           cd frontend
-          node -v
-          npm -v
           npm ci
           npm run build
+          ls -a
+          sudo mv /dist /var/www/arm-frontend
 
 
           
