--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
           npm ci
           npm run build
           ls -a
-          sudo mv /dist /var/www/arm-frontend
+          sudo mv ./dist /var/www/arm-frontend
 
 
           
