--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,7 @@ jobs:
           npm ci
           npm run build
           ls -a
+          sudo rm -rf /var/www/arm-frontend/dist
           sudo mv ./dist /var/www/arm-frontend
 
 
