--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,7 @@ jobs:
           python-version: "3.11"
       - run: |
           pip install -r backend/requirements.txt 
+          cd backend
           pytest
 
   deploy:
