--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,9 +22,12 @@ jobs:
         with:
           python-version: "3.11"
       - run: |
-          ls -a
           cd backend
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt 
           pytest
+          deactivate
 
   deploy:
     needs: build-test
