--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build Backend
-        run: docker compose up -d --build
+        run: sudo docker compose up -d --build
 
       - name: Moving html to nginx dir
         run: |
