--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.8"
 services:
   backend:
+    extra_hosts: 
+      - "host.docker.internal:host-gateway"
     build:
       context: .
       dockerfile: Dockerfile.backend
