--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.8"
 services:
   backend:
-    extra_hosts: 
-      - "host.docker.internal:host-gateway"
     build:
       context: .
       dockerfile: Dockerfile.backend
     container_name: Web_app_backend
+    networks:
+      - "host"
     ports:
       - "5000:5000"
