--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Build Backend
         run:  |
           sudo docker build -t web_app_backend -f Dockerfile.backend .
-          sudo docker run -d --name web_app_backend --add-host host.docker.internal:host-gateway -p 5000:5000 web_app_backend
+          sudo docker run --add-host host.docker.internal:host-gateway --rm -d --name web_app_backend Web_app_backend
+
 
 
 
