Minor changes to the Backend docker file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Build Backend
         run:  |
           sudo docker build -t web_app_backend -f Dockerfile.backend .
-          sudo docker run --add-host host.docker.internal:host-gateway --rm -d --name web_app_backend web_app_backend
+          sudo docker run --add-host host.docker.internal:host-gateway -p 5000:5000 --rm -d --name web_app_backend web_app_backend
          
