--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,13 +21,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      #- run: |
-      #    cd backend
-      #    python3 -m venv venv
-      #    source venv/bin/activate
-      #    pip install -r requirements.txt 
-       #   python3 -m pytest test
-       #   deactivate
+      - run: |
+          cd backend
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt 
+          python3 -m pytest test
+          deactivate
 
   deploy:
     needs: build-test
