--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "preact": "^10.27.2",
-    "preact-router": "^4.1.2"
+    "preact-router": "^4.1.2",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
