Minor changes to the frontend

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -4,4 +4,7 @@ COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY backend/ .
 EXPOSE 5000
-CMD ["python", "src/app.py"]
+CMD ["gunicorn", "src.app:app", \
+     "--bind", "0.0.0.0:5000", \
+     "--timeout", "600", \
+     "--log-level", "info"]
