--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 WORKDIR /app
 COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install gunicorn
 COPY backend/ .
 EXPOSE 5000
 CMD ["gunicorn", "src.app:app", \
