--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -5,7 +5,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install gunicorn
 COPY backend/ .
 EXPOSE 5000
-CMD ["gunicorn", "src.app:app", \
-     "--bind", "0.0.0.0:5000", \
-     "--timeout", "600", \
-     "--log-level", "info"]
+CMD ["gunicorn", "src.app:app", "--bind", "0.0.0.0:5000", "--timeout", "600", "--log-level", "info"]
