--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Build Backend 
         run:  |
+          sudo docker stop web_app_backend
+          sudo docker rm -f web_app_backend
           sudo docker build -t web_app_backend -f Dockerfile.backend .
           sudo docker run --add-host host.docker.internal:host-gateway -p 5000:5000 -d --name web_app_backend web_app_backend
          
