--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,7 @@ jobs:
         run:  |
           sudo docker stop web_app_backend
           sudo docker rm -f web_app_backend
+          sudo docker builder prune -a
           sudo docker build -t web_app_backend -f Dockerfile.backend .
           sudo docker run --add-host host.docker.internal:host-gateway -p 5000:5000 -d --name web_app_backend web_app_backend
          
