--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install gunicorn
+RUN pip install gevent
 COPY backend/ .
 EXPOSE 5000
 CMD ["gunicorn", "src.app:app", \
