--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -4,6 +4,7 @@ COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install gunicorn
 RUN pip install gevent
+RUN pip install psutil
 COPY backend/ .
 EXPOSE 5000
 CMD ["gunicorn", "src.app:app", \
