--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,5 +57,5 @@ jobs:
           fi
           sudo docker builder prune -a
           sudo docker build -t web_app_backend -f Dockerfile.backend .
-          sudo docker run --pid=host -add-host host.docker.internal:host-gateway -p 5000:5000 -d --name web_app_backend web_app_backend
+          sudo docker run --pid=host --add-host host.docker.internal:host-gateway -p 5000:5000 -d --name web_app_backend web_app_backend
          
