--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,12 +1,31 @@
 FROM python:3.11-slim
+
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    sqlite3 \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY backend/requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install gunicorn
-RUN pip install gevent
-RUN pip install psutil
+
+RUN pip install --no-cache-dir \
+    gunicorn \
+    gevent \
+    psutil \
+    SQLAlchemy \
+    pymysql
+
+RUN mkdir -p /app/Data
+
 COPY backend/ .
+
 EXPOSE 5000
+
 CMD ["gunicorn", "src.app:app", \
      "--bind", "0.0.0.0:5000", \
      "--timeout", "600", \
